# backend

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Commands.md  Dockerfile  README.md  conftest.py  contribute.md  design.md  development.md  docker-endpoint.sh  justfile  pyproject.toml  ruff.toml
.github/workflows/: ai-duplicate-detection.yml  ai-intl-triage.yml  code-quality.yml  codex-review.yml  django-tests.yml  ghcr-build.yml  security.yml
accounts/: admin.py  api_me_v1.py  api_orgs_v1.py  api_serializers.py  api_v1.py  apps.py  backends.py  email_addresses.py  forms.py  middleware.py  models.py  pipeline.py  signals.py  social_auth.py  tasks.py  tests.py  urls.py  views.py
accounts/migrations/: 0002_alter_user_is_active.py  0005_alter_user_managers.py  0006_add_profile_indexes.py  0007_shippingaddress.py  0008_organization_organizationmembership_and_more.py  0011_account_merge.py  0012_refreshtoken.py  0013_user_email_ci_unique_non_empty.py  0014_rename_accounts_ref_user_id_e1c9e1_idx_accounts_re_user_id_5688ee_idx.py  0015_add_withdrawal_account_model.py  0016_drop_user_email_unique.py
accounts/services/: __init__.py  account_merge.py  authentication.py  email_deduplication.py  jwt_tokens.py  masking.py  social_exchange.py  social_exchange_store.py
accounts/tests/: __init__.py  conftest.py  test_account_merge.py  test_admin.py  test_api_auth_v1.py  test_api_auth_v1_coverage.py  test_api_me_v1.py  test_api_me_v1_coverage.py  test_api_orgs_v1.py  test_auth_services.py  test_backends.py  test_email_deduplication.py  test_forms.py  test_forms_edge_cases.py  test_integration.py  test_management_commands.py  test_merge_notifications.py  test_merge_views.py  test_models.py  test_models_misc.py  test_organization.py  test_organization_views.py  test_pipeline.py  test_profile_edit_address.py  test_redeem_address_selection.py  test_shipping_address.py  test_sign_in.py  test_signals.py  test_social_auth_middleware.py  test_social_exchange.py  test_tasks.py  test_views.py  test_views_edge_cases.py
chdb/: __init__.py  apps.py  clickhousedb.py  services.py  tests.py
chdb/tests/: __init__.py  test_clickhousedb.py  test_clickhousedb_client.py  test_services.py
common/: api_v1.py  constants.py  load_testing.py  middleware.py  test_utils.py
common/services/: __init__.py  region.py
common/tests/: test_load_test_script.py  test_load_testing.py  test_middleware.py  test_region.py  test_test_utils.py
config/: admin.py  admin_site.py  api_common.py  api_v1.py  settings.py  settings_helpers.py  urls.py
config/tests/: test_api_v1.py  test_asgi.py  test_backoffice_e2e.py  test_canonical_host_redirect_middleware.py  test_ci_workflows.py  test_config.py  test_coverage_contract.py  test_coverage_gate.py  test_frontoffice_e2e.py  test_manage.py  test_mutation_contract.py  test_security_owasp.py  test_settings_branches_explicit.py  test_settings_helpers.py  test_settings_helpers_mutation.py  test_urls_debug_toolbar.py  test_wsgi.py
contributions/: __init__.py  admin.py  apps.py  models.py  services.py  tests.py  views.py
contributions/tests/: __init__.py  test_services.py
docs/: testing-strategy.md
homepage/: api_v1.py  apps.py  signals.py  tests.py  urls.py  views.py
homepage/tests/: __init__.py  test_api_v1.py  test_cache.py  test_canonical_host_middleware.py  test_config_branches.py  test_search.py  test_signals.py  test_views.py
labels/: __init__.py  admin.py  apps.py  models.py
labels/migrations/: 0001_initial.py  0002_alter_label_sync_source.py
labels/templatetags/: __init__.py  json_tags.py
labels/tests/: __init__.py  test_access_control.py
messages/: api_v1.py  models.py  services.py
messages/migrations/: 0002_alter_message_message_type.py
messages/tests/: test_admin.py  test_api_v1.py  test_services.py  test_views.py
points/: __init__.py  admin.py  allocation_services.py  api_v1.py  apps.py  fadada.py  forms.py  models.py  services.py  signals.py  tag_operations.py  tests.py  urls.py  views.py  webhook_urls.py  webhooks.py  withdrawal_contracts.py
points/management/: __init__.py
points/migrations/: 0001_initial.py  0002_add_slug_field.py  0002_contributioncache_pendingpointgrant_pointallocation_and_more.py  0003_populate_slug.py  0003_withdrawalrequest_id_card.py  0004_add_slug_unique.py  0004_withdrawalrequest_invoice_file.py  0005_remove_pendingpointgrant_points_pend_github__29416f_idx_and_more.py  0006_add_withdrawal_account_fk.py  0007_add_refund_transaction_type.py  0009_tag_withdrawable.py  0013_remove_approved_status.py  0014_create_default_tag.py  0015_withdrawal_contract_signing.py  (+1 more)
scripts/: check_coverage.py  load_test.py
shenbianyun/: __init__.py  admin.py  apps.py  crypto.py  models.py  scheduler.py  services.py
shop/: admin.py  api_v1.py  apps.py  forms.py  models.py  services.py  widgets.py
static/: theme.css
talent_reach/: __init__.py  admin.py  api_v1.py  apps.py  models.py  services.py
templates/: auth_base.html  base.html  change_email.html  change_password.html  horizontal_base.html  merge_request.html  merge_review.html  nobleui_base.html  password_reset_confirm.html  password_reset_done.html  password_reset_request.html  profile.html  profile_edit.html  public_profile.html  redeem_confirm.html  redemption_list.html  shipping_address_confirm_delete.html  shipping_address_form.html  shipping_address_guide.html  shipping_address_list.html  sign_in.html  sign_up.html  social_connections.html
(+98 files in other folders)
