[project]
name = "fullsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-anymail[mailgun]>=13.1",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-storages[s3]>=1.14.6",
    "pre-commit>=4.3.0",
    "social-auth-app-django>=5.5.1",
    "werkzeug>=3.1.3",
    "whitenoise>=6.11.0",
    "coverage>=7.6",
    "django-tasks>=0.8.1",
    "tblib>=3.1.0",
    "django-debug-toolbar>=6.0.0",
    "docutils>=0.22.2",
    "django-turnstile>=0.1.2",
    "clickhouse-connect>=0.9.2",
]

[tool.djlint]
profile="django"



[tool.coverage.run]
omit = [
    "manage.py",
    "*/migrations/*",
    "*/admin.py",
    "*/conftest.py",
    "conftest.py",
    "*/tests/*",
    "*/tests.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
