[project]
name = "fullsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-anymail[mailgun]>=13.1",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-storages[s3]>=1.14.6",
    "pre-commit>=4.3.0",
    "social-auth-app-django>=5.5.1",
    "werkzeug>=3.1.3",
    "whitenoise>=6.11.0",
    "coverage>=7.6",
    "django-tasks>=0.8.1",
    "tblib>=3.1.0",
    "django-debug-toolbar>=6.0.0",
    "docutils>=0.22.2",
    "django-turnstile>=0.1.2",
    "clickhouse-connect>=0.9.2",
    "requests>=2.32.5",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
]

[tool.djlint]
profile="django"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = "-q"

[tool.mutmut]
paths_to_mutate = [
    "accounts/views.py",
    "common/load_testing.py",
    "common/middleware.py",
    "config/settings_helpers.py",
    "points/allocation_services.py",
    "points/services.py",
    "scripts/check_coverage.py",
]
also_copy = [
    "accounts/tests",
    "chdb/tests",
    "common/__init__.py",
    "common/tests",
    "config/tests",
    "contributions/tests",
    "homepage/tests",
    "points/tests",
    "templates",
]
pytest_add_cli_args = ["--import-mode=importlib"]
pytest_add_cli_args_test_selection = [
    "accounts/tests/test_views.py",
    "common/tests/test_load_testing.py",
    "config/tests/test_canonical_host_redirect_middleware.py",
    "config/tests/test_coverage_gate.py",
    "config/tests/test_settings_helpers_mutation.py",
    "points/tests/test_allocation_contract.py",
    "points/tests/test_allocation_services.py",
    "points/tests/test_services.py",
]
max_stack_depth = -1


[tool.coverage.run]
branch = true
relative_files = true
source = [
    "accounts",
    "chdb",
    "common",
    "config",
    "contributions",
    "homepage",
    "messages",
    "points",
    "scripts",
    "shop",
]
omit = [
    "manage.py",
    "*/migrations/*",
    "*/conftest.py",
    "conftest.py",
    "*/tests/*",
    "*/tests.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "ruff>=0.14.5",
]
